test/corpus/custom_item.txt
=========================
Value data - DWORD value
=========================

<check_type:"Windows" version:"2">
  <item>
    value: 5
  </item>
</check_type>

---

(source_file
  (item_block
    (generic_tag_value_pair
      (generic_tag_key)
      (value_data_dword))))

=========================
Value data - Range - 2 DWORDS
=========================

<check_type:"Windows" version:"2">
  <item>
    value: [11..9841]
  </item>
</check_type>

---

(source_file
  (item_block
    (generic_tag_value_pair
      (generic_tag_key)
      (value_data_range
        (value_data_dword)
        (value_data_dword)))))

=========================
Value data - Range - MIN and DWORD
=========================

<check_type:"Windows" version:"2">
  <item>
    value: [MIN..9841]
  </item>
</check_type>

---

(source_file
  (item_block
    (generic_tag_value_pair
      (generic_tag_key)
      (value_data_range
        (value_data_min)
        (value_data_dword)))))

=========================
Value data - Range - DWORD and MAX
=========================

<check_type:"Windows" version:"2">
  <item>
    value: [11..MAX]
  </item>
</check_type>

---

(source_file
  (item_block
    (generic_tag_value_pair
    (generic_tag_key)
    (value_data_range
      (value_data_dword)
      (value_data_max)))))

=========================
Value data - Range - MIN and MAX
=========================

<check_type:"Windows" version:"2">
  <item>
    value: [MIN..MAX]
  </item>
</check_type>

---

(source_file
  (item_block
    (generic_tag_value_pair
      (generic_tag_key)
      (value_data_range
        (value_data_min)
        (value_data_max)))))

=========================
Value data - REGISTRY_SETTING
=========================
<check_type:"Windows" version:"2">
  <custom_item>
    type        : REGISTRY_SETTING
    description : "Windows Server 2012 is installed"
    value_type  : POLICY_TEXT
    value_data  : "^[a-zA-Z0-9\(\)\s]*2012(?!\s[rR]2)[a-zA-Z0-9\(\)\s]*$"
    reg_key     : "HKLM\Software\Microsoft\Windows Nt\Currentversion"
    reg_item    : "ProductName"
    check_type  : CHECK_REGEX
  </custom_item>
</check_type>
---

(source_file
      (custom_item_block
        (generic_tag_value_pair
          (generic_tag_key)
          (unquoted_keyword))
        (generic_tag_value_pair
          (generic_tag_key)
          (double_quoted_string))
        (generic_tag_value_pair
          (generic_tag_key)
          (unquoted_keyword))
        (generic_tag_value_pair
          (generic_tag_key)
          (double_quoted_string))
        (generic_tag_value_pair
          (generic_tag_key)
          (double_quoted_string))
        (generic_tag_value_pair
          (generic_tag_key)
          (double_quoted_string))
        (generic_tag_value_pair
          (generic_tag_key)
          (unquoted_keyword))))
